Small refactor to AbstractDelegate and AbstractPlaceDelegate